external_deps/MiniMoonBitParser.ts
// Generated from MiniMoonBit.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { MiniMoonBitVisitor } from "./MiniMoonBitVisitor";


export class MiniMoonBitParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly TRUE = 5;
	public static readonly FALSE = 6;
	public static readonly UNIT = 7;
	public static readonly BOOL = 8;
	public static readonly INT = 9;
	public static readonly DOUBLE = 10;
	public static readonly ARRAY = 11;
	public static readonly NOT = 12;
	public static readonly IF = 13;
	public static readonly ELSE = 14;
	public static readonly FN = 15;
	public static readonly LET = 16;
	public static readonly NUMBER = 17;
	public static readonly IDENTIFIER = 18;
	public static readonly DOT = 19;
	public static readonly ADD = 20;
	public static readonly SUB = 21;
	public static readonly MUL = 22;
	public static readonly DIV = 23;
	public static readonly ASSIGN = 24;
	public static readonly EQ = 25;
	public static readonly LE = 26;
	public static readonly LPAREN = 27;
	public static readonly RPAREN = 28;
	public static readonly LBRACKET = 29;
	public static readonly RBRACKET = 30;
	public static readonly LCURLYBRACKET = 31;
	public static readonly RCURLYBRACKET = 32;
	public static readonly ARROW = 33;
	public static readonly COLON = 34;
	public static readonly SEMICOLON = 35;
	public static readonly COMMA = 36;
	public static readonly WS = 37;
	public static readonly RULE_prog = 0;
	public static readonly RULE_top_level = 1;
	public static readonly RULE_top_let_decl = 2;
	public static readonly RULE_toplevel_fn_decl = 3;
	public static readonly RULE_main_fn_decl = 4;
	public static readonly RULE_top_fn_decl = 5;
	public static readonly RULE_param_list = 6;
	public static readonly RULE_param = 7;
	public static readonly RULE_fn_body = 8;
	public static readonly RULE_nontop_fn_decl = 9;
	public static readonly RULE_nontop_param_list = 10;
	public static readonly RULE_nontop_param = 11;
	public static readonly RULE_stmt = 12;
	public static readonly RULE_let_tuple_stmt = 13;
	public static readonly RULE_let_stmt = 14;
	public static readonly RULE_type_annotation = 15;
	public static readonly RULE_fn_decl_stmt = 16;
	public static readonly RULE_assign_stmt = 17;
	public static readonly RULE_expr_stmt = 18;
	public static readonly RULE_expr = 19;
	public static readonly RULE_add_sub_level_expr = 20;
	public static readonly RULE_mul_div_level_expr = 21;
	public static readonly RULE_if_level_expr = 22;
	public static readonly RULE_if_expr = 23;
	public static readonly RULE_get_or_apply_level_expr = 24;
	public static readonly RULE_get_expr = 25;
	public static readonly RULE_apply_expr = 26;
	public static readonly RULE_empty_apply_expr = 27;
	public static readonly RULE_nonempty_apply_expr = 28;
	public static readonly RULE_value_expr = 29;
	public static readonly RULE_unit_expr = 30;
	public static readonly RULE_tuple_expr = 31;
	public static readonly RULE_block_expr = 32;
	public static readonly RULE_bool_expr = 33;
	public static readonly RULE_neg_expr = 34;
	public static readonly RULE_floating_point_expr = 35;
	public static readonly RULE_int_expr = 36;
	public static readonly RULE_not_expr = 37;
	public static readonly RULE_array_make_expr = 38;
	public static readonly RULE_identifier_expr = 39;
	public static readonly RULE_type = 40;
	public static readonly RULE_array_type = 41;
	public static readonly RULE_tuple_type = 42;
	public static readonly RULE_function_type = 43;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"prog", "top_level", "top_let_decl", "toplevel_fn_decl", "main_fn_decl", 
		"top_fn_decl", "param_list", "param", "fn_body", "nontop_fn_decl", "nontop_param_list", 
		"nontop_param", "stmt", "let_tuple_stmt", "let_stmt", "type_annotation", 
		"fn_decl_stmt", "assign_stmt", "expr_stmt", "expr", "add_sub_level_expr", 
		"mul_div_level_expr", "if_level_expr", "if_expr", "get_or_apply_level_expr", 
		"get_expr", "apply_expr", "empty_apply_expr", "nonempty_apply_expr", "value_expr", 
		"unit_expr", "tuple_expr", "block_expr", "bool_expr", "neg_expr", "floating_point_expr", 
		"int_expr", "not_expr", "array_make_expr", "identifier_expr", "type", 
		"array_type", "tuple_type", "function_type",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'main'", "'init'", "'::'", "'make'", "'true'", "'false'", 
		"'Unit'", "'Bool'", "'Int'", "'Double'", "'Array'", "'not'", "'if'", "'else'", 
		"'fn'", "'let'", undefined, undefined, "'.'", "'+'", "'-'", "'*'", "'/'", 
		"'='", "'=='", "'<='", "'('", "')'", "'['", "']'", "'{'", "'}'", "'->'", 
		"':'", "';'", "','",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, "TRUE", "FALSE", 
		"UNIT", "BOOL", "INT", "DOUBLE", "ARRAY", "NOT", "IF", "ELSE", "FN", "LET", 
		"NUMBER", "IDENTIFIER", "DOT", "ADD", "SUB", "MUL", "DIV", "ASSIGN", "EQ", 
		"LE", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LCURLYBRACKET", "RCURLYBRACKET", 
		"ARROW", "COLON", "SEMICOLON", "COMMA", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(MiniMoonBitParser._LITERAL_NAMES, MiniMoonBitParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return MiniMoonBitParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "MiniMoonBit.g4"; }

	// @Override
	public get ruleNames(): string[] { return MiniMoonBitParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return MiniMoonBitParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(MiniMoonBitParser._ATN, this);
	}
	// @RuleVersion(0)
	public prog(): ProgContext {
		let _localctx: ProgContext = new ProgContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, MiniMoonBitParser.RULE_prog);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 91;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === MiniMoonBitParser.FN || _la === MiniMoonBitParser.LET) {
				{
				{
				this.state = 88;
				this.top_level();
				}
				}
				this.state = 93;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 94;
			this.match(MiniMoonBitParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public top_level(): Top_levelContext {
		let _localctx: Top_levelContext = new Top_levelContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, MiniMoonBitParser.RULE_top_level);
		try {
			this.state = 98;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case MiniMoonBitParser.LET:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 96;
				this.top_let_decl();
				}
				break;
			case MiniMoonBitParser.FN:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 97;
				this.toplevel_fn_decl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public top_let_decl(): Top_let_declContext {
		let _localctx: Top_let_declContext = new Top_let_declContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, MiniMoonBitParser.RULE_top_let_decl);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 100;
			this.match(MiniMoonBitParser.LET);
			this.state = 101;
			this.match(MiniMoonBitParser.IDENTIFIER);
			this.state = 102;
			this.match(MiniMoonBitParser.COLON);
			this.state = 103;
			this.type();
			this.state = 104;
			this.match(MiniMoonBitParser.ASSIGN);
			this.state = 105;
			this.expr();
			this.state = 106;
			this.match(MiniMoonBitParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public toplevel_fn_decl(): Toplevel_fn_declContext {
		let _localctx: Toplevel_fn_declContext = new Toplevel_fn_declContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, MiniMoonBitParser.RULE_toplevel_fn_decl);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 110;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				{
				this.state = 108;
				this.main_fn_decl();
				}
				break;

			case 2:
				{
				this.state = 109;
				this.top_fn_decl();
				}
				break;
			}
			this.state = 112;
			this.match(MiniMoonBitParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public main_fn_decl(): Main_fn_declContext {
		let _localctx: Main_fn_declContext = new Main_fn_declContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, MiniMoonBitParser.RULE_main_fn_decl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 114;
			this.match(MiniMoonBitParser.FN);
			this.state = 115;
			_la = this._input.LA(1);
			if (!(_la === MiniMoonBitParser.T__0 || _la === MiniMoonBitParser.T__1)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 116;
			this.fn_body();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public top_fn_decl(): Top_fn_declContext {
		let _localctx: Top_fn_declContext = new Top_fn_declContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, MiniMoonBitParser.RULE_top_fn_decl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 118;
			this.match(MiniMoonBitParser.FN);
			this.state = 119;
			this.match(MiniMoonBitParser.IDENTIFIER);
			this.state = 120;
			this.match(MiniMoonBitParser.LPAREN);
			this.state = 122;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MiniMoonBitParser.IDENTIFIER) {
				{
				this.state = 121;
				this.param_list();
				}
			}

			this.state = 124;
			this.match(MiniMoonBitParser.RPAREN);
			this.state = 125;
			this.match(MiniMoonBitParser.ARROW);
			this.state = 126;
			this.type();
			this.state = 127;
			this.fn_body();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public param_list(): Param_listContext {
		let _localctx: Param_listContext = new Param_listContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, MiniMoonBitParser.RULE_param_list);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 129;
			this.param();
			this.state = 134;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === MiniMoonBitParser.COMMA) {
				{
				{
				this.state = 130;
				this.match(MiniMoonBitParser.COMMA);
				this.state = 131;
				this.param();
				}
				}
				this.state = 136;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public param(): ParamContext {
		let _localctx: ParamContext = new ParamContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, MiniMoonBitParser.RULE_param);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 137;
			this.match(MiniMoonBitParser.IDENTIFIER);
			this.state = 138;
			this.type_annotation();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fn_body(): Fn_bodyContext {
		let _localctx: Fn_bodyContext = new Fn_bodyContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, MiniMoonBitParser.RULE_fn_body);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 140;
			this.match(MiniMoonBitParser.LCURLYBRACKET);
			this.state = 144;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << MiniMoonBitParser.TRUE) | (1 << MiniMoonBitParser.FALSE) | (1 << MiniMoonBitParser.ARRAY) | (1 << MiniMoonBitParser.NOT) | (1 << MiniMoonBitParser.IF) | (1 << MiniMoonBitParser.FN) | (1 << MiniMoonBitParser.LET) | (1 << MiniMoonBitParser.NUMBER) | (1 << MiniMoonBitParser.IDENTIFIER) | (1 << MiniMoonBitParser.SUB) | (1 << MiniMoonBitParser.LPAREN) | (1 << MiniMoonBitParser.LCURLYBRACKET))) !== 0)) {
				{
				{
				this.state = 141;
				this.stmt();
				}
				}
				this.state = 146;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 147;
			this.match(MiniMoonBitParser.RCURLYBRACKET);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public nontop_fn_decl(): Nontop_fn_declContext {
		let _localctx: Nontop_fn_declContext = new Nontop_fn_declContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, MiniMoonBitParser.RULE_nontop_fn_decl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 149;
			this.match(MiniMoonBitParser.FN);
			this.state = 150;
			this.match(MiniMoonBitParser.IDENTIFIER);
			this.state = 151;
			this.match(MiniMoonBitParser.LPAREN);
			this.state = 153;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MiniMoonBitParser.IDENTIFIER) {
				{
				this.state = 152;
				this.nontop_param_list();
				}
			}

			this.state = 155;
			this.match(MiniMoonBitParser.RPAREN);
			this.state = 158;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MiniMoonBitParser.ARROW) {
				{
				this.state = 156;
				this.match(MiniMoonBitParser.ARROW);
				this.state = 157;
				this.type();
				}
			}

			this.state = 160;
			this.fn_body();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public nontop_param_list(): Nontop_param_listContext {
		let _localctx: Nontop_param_listContext = new Nontop_param_listContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, MiniMoonBitParser.RULE_nontop_param_list);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 162;
			this.nontop_param();
			this.state = 167;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === MiniMoonBitParser.COMMA) {
				{
				{
				this.state = 163;
				this.match(MiniMoonBitParser.COMMA);
				this.state = 164;
				this.nontop_param();
				}
				}
				this.state = 169;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public nontop_param(): Nontop_paramContext {
		let _localctx: Nontop_paramContext = new Nontop_paramContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, MiniMoonBitParser.RULE_nontop_param);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 170;
			this.match(MiniMoonBitParser.IDENTIFIER);
			this.state = 172;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MiniMoonBitParser.COLON) {
				{
				this.state = 171;
				this.type_annotation();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public stmt(): StmtContext {
		let _localctx: StmtContext = new StmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, MiniMoonBitParser.RULE_stmt);
		try {
			this.state = 179;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 174;
				this.let_tuple_stmt();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 175;
				this.let_stmt();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 176;
				this.fn_decl_stmt();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 177;
				this.assign_stmt();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 178;
				this.expr_stmt();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public let_tuple_stmt(): Let_tuple_stmtContext {
		let _localctx: Let_tuple_stmtContext = new Let_tuple_stmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, MiniMoonBitParser.RULE_let_tuple_stmt);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 181;
			this.match(MiniMoonBitParser.LET);
			this.state = 182;
			this.match(MiniMoonBitParser.LPAREN);
			this.state = 183;
			this.match(MiniMoonBitParser.IDENTIFIER);
			this.state = 188;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === MiniMoonBitParser.COMMA) {
				{
				{
				this.state = 184;
				this.match(MiniMoonBitParser.COMMA);
				this.state = 185;
				this.match(MiniMoonBitParser.IDENTIFIER);
				}
				}
				this.state = 190;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 191;
			this.match(MiniMoonBitParser.RPAREN);
			this.state = 193;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MiniMoonBitParser.COLON) {
				{
				this.state = 192;
				this.type_annotation();
				}
			}

			this.state = 195;
			this.match(MiniMoonBitParser.ASSIGN);
			this.state = 196;
			this.expr();
			this.state = 197;
			this.match(MiniMoonBitParser.SEMICOLON);
			this.state = 198;
			this.stmt();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public let_stmt(): Let_stmtContext {
		let _localctx: Let_stmtContext = new Let_stmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, MiniMoonBitParser.RULE_let_stmt);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 200;
			this.match(MiniMoonBitParser.LET);
			this.state = 201;
			this.match(MiniMoonBitParser.IDENTIFIER);
			this.state = 203;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MiniMoonBitParser.COLON) {
				{
				this.state = 202;
				this.type_annotation();
				}
			}

			this.state = 205;
			this.match(MiniMoonBitParser.ASSIGN);
			this.state = 206;
			this.expr();
			this.state = 207;
			this.match(MiniMoonBitParser.SEMICOLON);
			this.state = 208;
			this.stmt();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public type_annotation(): Type_annotationContext {
		let _localctx: Type_annotationContext = new Type_annotationContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, MiniMoonBitParser.RULE_type_annotation);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 210;
			this.match(MiniMoonBitParser.COLON);
			this.state = 211;
			this.type();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fn_decl_stmt(): Fn_decl_stmtContext {
		let _localctx: Fn_decl_stmtContext = new Fn_decl_stmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, MiniMoonBitParser.RULE_fn_decl_stmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 213;
			this.top_fn_decl();
			this.state = 214;
			this.match(MiniMoonBitParser.SEMICOLON);
			this.state = 215;
			this.stmt();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public assign_stmt(): Assign_stmtContext {
		let _localctx: Assign_stmtContext = new Assign_stmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, MiniMoonBitParser.RULE_assign_stmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 217;
			this.get_expr();
			this.state = 218;
			this.match(MiniMoonBitParser.ASSIGN);
			this.state = 219;
			this.expr();
			this.state = 220;
			this.match(MiniMoonBitParser.SEMICOLON);
			this.state = 221;
			this.stmt();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expr_stmt(): Expr_stmtContext {
		let _localctx: Expr_stmtContext = new Expr_stmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, MiniMoonBitParser.RULE_expr_stmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 223;
			this.expr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expr(): ExprContext {
		let _localctx: ExprContext = new ExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 38, MiniMoonBitParser.RULE_expr);
		try {
			this.state = 234;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 14, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 225;
				this.add_sub_level_expr();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 226;
				this.add_sub_level_expr();
				this.state = 227;
				this.match(MiniMoonBitParser.EQ);
				this.state = 228;
				this.expr();
				}
				break;
